fix: Appoint the height of the right section for to avoid the overflow

--- a/styles/create_election_card.module.css
+++ b/styles/create_election_card.module.css
@@ -1,4 +1,5 @@
 .create_election_card {
+    width: 48%;
     padding: 0 15px;
     display: flex;
     align-items: center;
@@ -6,6 +7,8 @@
     background-color: var(--white);
     border-radius: 15px;
     cursor: pointer;
+    border: 1px solid rgb(255, 85, 89, .1);
+    margin-bottom: 30px;
 }
 
 .plus_sign {
